fix: fix formatter in build