@@ -37,230 +37,7 @@
   <loadfile property="antcontrib.cp"
             srcFile="../${antcontrib.classpath.file}" />
   <taskdef resource="net/sf/antcontrib/antlib.xml"
-           classpath="${antcontrib.cp}">
-    <!-- Deletes the existing build, docs and dist directory-->
-    <target name="clean">
-      <delete>
-        <fileset dir="."
-                 includes="**/*.class" />
-      </delete>
-      <delete dir="${docs.dir}" />
-      <delete dir="${dist.dir}" />
-    </target>
-    <!-- Creates the  build, docs and dist directory-->
-    <target name="makedir">
-      <mkdir dir="${docs.dir}" />
-      <mkdir dir="${dist.dir}" />
-    </target>
-    <!-- Compiles the java code (including the usage of library for JUnit -->
-    <target name="compile"
-            depends="clean, makedir,format,checkstyle">
-      <javac includeantruntime="false"
-             srcdir="${src.dir}"
-             destdir="${build.dir}">
-        <compilerarg value="${javac.params}" />
-        <compilerarg value="${javac.params1}" />
-      </javac>
-    </target>
-    <!-- Creates Javadoc -->
-    <target name="docs"
-            depends="compile">
-      <javadoc packagenames="${packages}"
-               sourcepath="${src.dir}"
-               destdir="${docs.dir}"
-               additionalparam="${javadoc.params}"></javadoc>
-    </target>
-    <target name="manifest">
-      <tstamp />
-      <exec executable="bash"
-            outputproperty="build">
-        <arg value="-c" />
-        <arg value="git log --pretty=format:'%h' | head -1" />
-      </exec>
-      <manifest mode="update"
-                file="${jar.manifest}">
-        <attribute name="Built-By"
-                   value="${user.name}" />
-        <section name="common">
-          <attribute name="Specification-Title"
-                     value="${ant.project.name}" />
-          <attribute name="Specification-Version"
-                     value="${version}" />
-          <attribute name="Specification-Vendor"
-                     value="${user.name}" />
-          <attribute name="Implementation-Title"
-                     value="${ant.project.name}" />
-          <attribute name="Implementation-Version"
-                     value="${build} ${TODAY}" />
-          <attribute name="Implementation-Vendor"
-                     value="${user.name}" />
-        </section>
-        <attribute name="Main-Class"
-                   value="${main.class}" />
-      </manifest>
-      <fixcrlf srcdir="${src.dir}"
-               includes="**/MANIFEST.MF"
-               eol="unix"
-               eof="remove"
-               tab="remove"
-               tablength="2"
-               fixlast="false" />
-    </target>
-    <!--Creates the deployable jar file  -->
-    <target name="jar"
-            depends="compile,manifest">
-      <jar destfile="${dist.dir}\${ant.project.name}-${version}.jar"
-           basedir="${build.dir}"
-           includes="**/*.class"
-           manifest="${jar.manifest}"></jar>
-    </target>
-    <target name="run">
-      <description>Run target</description>
-      <java classname="${main.class}">
-        <classpath>
-          <pathelement location="${dist.dir}\${ant.project.name}-${version}.jar" />
-          <pathelement path="${java.class.path}" />
-        </classpath>
-      </java>
-    </target>
-    <target name="format">
-      <fileset dir="${basedir}"
-               id="javasrcs">
-        <include name="**/*.java" />
-      </fileset>
-      <pathconvert property="sources"
-                   refid="javasrcs"
-                   pathsep=" " />
-      <loadfile property="gformat.cp"
-                srcFile="../${gformat.classpath.file}" />
-      <java classname="${gformat.main.class}"
-            fork="true">
-        <arg line="-i ${sources}" />
-        <classpath>
-          <pathelement path="${gformat.cp}" />
-          <pathelement path="${java.class.path}" />
-        </classpath>
-      </java>
-      <exec executable="bash">
-        <arg line="../cformat ${basedir}" />
-      </exec>
-      <exec executable="bash">
-        <arg line="../xformatall ${basedir}" />
-      </exec>
-    </target>
-    <target name="checkstyleg">
-      <move file="suppressions-xpath.xml"
-            tofile="suppressions-xpath.xml.bak"
-            preservelastmodified="true"
-            force="true"
-            failonerror="false"
-            verbose="true" />
-      <fileset dir="${basedir}"
-               id="javasrcs">
-        <include name="**/*.java" />
-      </fileset>
-      <pathconvert property="sources"
-                   refid="javasrcs"
-                   pathsep=" " />
-      <loadfile property="cs.cp"
-                srcFile="../${cs.classpath.file}" />
-      <java classname="${cs.main.class}"
-            logError="true">
-        <arg line="-c ../${cs.config} -p ../${cs.properties} -o ${ant.project.name}-xpath.xml -g ${sources}" />
-        <classpath>
-          <pathelement path="${cs.cp}" />
-          <pathelement path="${java.class.path}" />
-        </classpath>
-      </java>
-      <condition property="file.is.empty"
-                 else="false">
-        <length file="${ant.project.name}-xpath.xml"
-                when="equal"
-                length="0" />
-      </condition>
-      <if>
-        <equals arg1="${file.is.empty}"
-                arg2="false" />
-        <then>
-          <move file="${ant.project.name}-xpath.xml"
-                tofile="suppressions-xpath.xml"
-                preservelastmodified="true"
-                force="true"
-                failonerror="true"
-                verbose="true" />
-        </then>
-        <else>
-          <echo message="No suppressions generated." />
-          <delete file="${ant.project.name}-xpath.xml"
-                  verbose="true"
-                  failonerror="false" />
-        </else>
-      </if>
-    </target>
-    <target name="checkstyle">
-      <first id="checkstylefile">
-        <fileset dir=".."
-                 includes="${cs.config}" />
-      </first>
-      <checkstyle config="${toString:checkstylefile}"
-                  failOnViolation="false"
-                  properties="../${cs.properties}">
-        <fileset dir="${src.dir}"
-                 includes="**/*.java" />
-        <formatter type="plain" />
-        <formatter type="plain"
-                   toFile="${cs.output}" />
-        <classpath>
-          <pathelement path="${cs.cp}" />
-          <pathelement path="${java.class.path}" />
-        </classpath>
-      </checkstyle>
-    </target>
-    <target name="pmd">
-      <property name="pmd.errCount"
-                value="0" />
-      <pmd cacheLocation="${pmd.cacheFile}"
-           minimumPriority="${pmd.minimumPriority}"
-           suppressMarker="${pmd.suppressMarker}"
-           failuresPropertyName="pmd.errCount">
-        <ruleset>../${pmd.config}</ruleset>
-        <auxclasspath>
-          <pathelement path="${basedir}" />
-        </auxclasspath>
-        <formatter type="${pmd.reportFormat}"
-                   toFile="${pmd.output}"
-                   toConsole="${pmd.toConsole}">
-          <fileset dir="${basedir}">
-            <include name="**/*.java" />
-          </fileset>
-        </formatter>
-        <fileset dir="${basedir}">
-          <include name="**/*.java" />
-        </fileset>
-      </pmd>
-      <echo message="${pmd.errCount} violations found." />
-    </target>
-    <target name="spotbugs"
-            depends="compile">
-      <spotbugs output="text"
-                outputFile="${spotbugs.output}"
-                reportLevel="low"
-                effort="max"
-                nested="true">
-        <auxClasspath path="${basedir}" />
-        <sourcePath path="${basedir}" />
-        <class location="${basedir}" />
-        <classpath>
-          <pathelement path="${spotbugs.cp}" />
-          <pathelement path="${java.class.path}" />
-        </classpath>
-      </spotbugs>
-    </target>
-    <target name="main"
-            depends="compile, pmd, spotbugs,jar,docs">
-      <description>Main target</description>
-    </target>
-  </taskdef>
+           classpath="${antcontrib.cp}" />
   <!-- Deletes the existing build, docs and dist directory-->
   <target name="clean">
     <delete>
@@ -358,6 +135,7 @@
               srcFile="../${gformat.classpath.file}" />
     <java classname="${gformat.main.class}"
           fork="true">
+      <jvmarg line="--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" />
       <arg line="-i ${sources}" />
       <classpath>
         <pathelement path="${gformat.cp}" />
@@ -455,8 +233,7 @@
                  toConsole="${pmd.toConsole}">
         <fileset dir="${basedir}">
           <include name="**/*.java" />
-        </fileset>
-      </formatter>
+        </fileset></formatter>
       <fileset dir="${basedir}">
         <include name="**/*.java" />
       </fileset>
